--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
               </div>
             </div>
           </button>
-
           <button class="brave">
             <div class="text">Brave Wallet</div>
             <div class="image">
@@ -66,6 +65,100 @@
             <p>I dont have a wallet</p>
           </div>
         </a>
+      </div>
+
+      <div class="metamask-box">
+        <div class="first-section">
+          <div class="btn">
+            <img class="help-btn" src="./assets/back.svg" alt="" />
+          </div>
+
+          <div class="heading">MetaMask</div>
+
+          <div class="btn">
+            <img class="close-btn" src="./assets/close.svg" alt="" />
+          </div>
+        </div>
+
+        <div class="middle-section">
+          <img src="./assets/metamask-wallet.svg" alt="" />
+          <div class="heading">Install MetaMask</div>
+          <p>To connect your MetaMask wallet, install the browser extension.</p>
+        </div>
+
+        <div class="last-section">
+          <a href="">
+            <img src="./assets/chrome.svg" alt="" />
+            <div class="text">Install the Extension</div>
+          </a>
+        </div>
+      </div>
+
+      <div class="brave-box">
+        <div class="first-section">
+          <div class="btn">
+            <img class="help-btn" src="./assets/back.svg" alt="" />
+          </div>
+
+          <div class="heading">Browser Wallet</div>
+
+          <div class="btn">
+            <img class="close-btn" src="./assets/close.svg" alt="" />
+          </div>
+        </div>
+
+        <div class="middle-section">
+          <div class="box-image">
+            <img src="./assets/box.svg" alt="" />
+            <img class="try-again" src="./assets/try-again.svg" alt="" />
+          </div>
+
+          <div class="heading">
+            <img src="./assets/hazard.svg" alt="" />
+            <div class="text">Connection Failed</div>
+          </div>
+          <p>Sorry, something went wrong. Please try connecting again.</p>
+        </div>
+      </div>
+
+      <div class="get-wallet-box">
+        <div class="first-section">
+          <div class="btn">
+            <img class="help-btn" src="./assets/back.svg" alt="" />
+          </div>
+
+          <div class="heading">Get a Wallet</div>
+
+          <div class="btn">
+            <img class="close-btn" src="./assets/close.svg" alt="" />
+          </div>
+        </div>
+
+        <div class="middle-section">
+          <img class="background" src="./assets/svg-background.svg" alt="" />
+          <div class="svgs">
+            <img class="metamask" src="./assets/metamask-wallet.svg" alt="" />
+            <img class="ribbon" src="./assets/ribbon-wallet.svg" alt="" />
+            <img class="coinbase" src="./assets/coinbase-wallet.svg" alt="" />
+            <img class="shield" src="./assets/sheild-wallet.svg" alt="" />
+            <img class="shark" src="./assets/shark-wallet.svg" alt="" />
+          </div>
+          <div class="heading">Start Exploring Web3</div>
+          <p>
+            Your wallet is the gateway to all things Ethereum, the magical
+            technology that makes it possible to explore web3.
+          </p>
+        </div>
+
+        <div class="last-section">
+          <a href="">
+            <div class="text">Choose Your First Wallet</div>
+            <div class="arrows">
+              <img class="cap" src="./assets/cap.svg" alt="" />
+              <img class="line" src="./assets/line.svg" alt="" />
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </body>
