request screen is added and minor touchups

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="box">
+      <!------------------- Main screen ------------------>
       <div class="box-container">
         <div class="first-section">
           <div class="btn">
@@ -67,10 +68,12 @@
         </a>
       </div>
 
+      <!------------------- Metamask Screen ------------------>
+
       <div class="metamask-box">
         <div class="first-section">
           <div class="btn">
-            <img class="help-btn" src="./assets/back.svg" alt="" />
+            <img class="back-btn" src="./assets/back.svg" alt="" />
           </div>
 
           <div class="heading">MetaMask</div>
@@ -94,7 +97,37 @@
         </div>
       </div>
 
-      <div class="brave-box">
+      <!------------------- Bravebox Screen Connection Establishing ------------------>
+
+      <div class="brave-box-establishing">
+        <div class="first-section">
+          <div class="btn">
+            <img class="help-btn" src="./assets/back.svg" alt="" />
+          </div>
+
+          <div class="heading">Browser Wallet</div>
+
+          <div class="btn">
+            <img class="close-btn" src="./assets/close.svg" alt="" />
+          </div>
+        </div>
+
+        <div class="middle-section">
+          <div class="box-image">
+            <img src="./assets/box.svg" alt="" />
+          </div>
+
+          <div class="heading">
+            <div class="text">Requesting Connection</div>
+          </div>
+          <p>
+            Accepting the request through your wallet to connect to this app.
+          </p>
+        </div>
+      </div>
+      <!------------------- Bravebox Screen Connection Failed ------------------>
+
+      <div class="brave-box-failed">
         <div class="first-section">
           <div class="btn">
             <img class="help-btn" src="./assets/back.svg" alt="" />
@@ -120,6 +153,8 @@
           <p>Sorry, something went wrong. Please try connecting again.</p>
         </div>
       </div>
+
+      <!------------------- I dont have a wallet ------------------>
 
       <div class="get-wallet-box">
         <div class="first-section">
